add reviews to chrome extension

--- a/chome_extension/popup.html
+++ b/chome_extension/popup.html
@@ -37,6 +37,8 @@
       <input type="password" id="password" placeholder="Password"><br>
     </div>
       <button id="login">Login</button>
+    <div id="review_content">
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
